# xsample

./: .gitignore  .gitlab-ci.yml  .gitmodules  CMakeLists.txt  Makefile  TemplatePPC (CW Pro6)  build-win-max-msvc.bat  build-win-pd-cygwin.sh  build-win-pd-mingw.bat  build-win-pd-msvc.bat  config-lnx-gcc.txt  config-max-msvc.txt  config-pd-bcc.txt  config-pd-cygwin.txt  config-pd-darwin.txt  config-pd-linux.txt  config-pd-mingw.txt  config-pd-msvc.txt  config-win-cygwin.txt  config-win-max-msvc.txt  config-win-mingw.txt  config-win-pd-msvc.txt  license.txt  make-files.txt  makefile-mac-gcc.txt  makefile-win-cygwin.txt  makefile-win-mingw.txt  makefile-win-msvc.txt  makefile.max-msvc  makefile.pd-bcc  makefile.pd-cygwin  makefile.pd-darwin  makefile.pd-linux  makefile.pd-mingw  makefile.pd-msvc  package.txt  readme.txt  resources  xsample.cw  xsample.dsp  (+3 more)
MPW/: MakeAliases
maxmsp/: xgroove~.help  xplay~.help  xrecord~.help  xsample-objectmappings.txt  xsample.help
pd/: ramp.pd  xgroove.help.pd  xgroove~.pd  xplay.help.pd  xplay~.pd  xrecord.help.pd  xrecord~.pd
pd-ex/: xsampledemo.pd
source/: groove.cpp  inter.ci  inter.cpp  inter.h  main.cpp  main.h  makefile.bcc  makefile.pd-cygwin  makefile.pd-linux  play.cpp  prefix.h  record.cpp  xgroove~-Info.plist  xrecord~-Info.plist  xsample  xsample-Info.plist  xsample.cw  xsample.dsp  xsample.mpw
xsample.xcode/: project.pbxproj
xsample.xcodeproj/: project.pbxproj
